Final de la traduccion creeria

--- a/react-d'lish/src/lang/en/global.json
+++ b/react-d'lish/src/lang/en/global.json
@@ -107,6 +107,14 @@
         "do-order-button" : "Order"
 
     },
+    "order" : {
+        "order-complete" : "ORDER COMPLETED!",
+        "order-summary" : "Summary of the order",
+        "order-realized" : "Order realized in",
+        "product" : "Product",
+        "to-start" : "Go to start",
+        "price" : "Price"
+    },
     "desayuno" : {
         "breakfast-title" : "Breakfast",
         "popular-title" : "Popular among students"
